# claw-a-thon-demo-agent

./: .gitignore  README.md  docker-compose.yml
config-agent/: Dockerfile  (+4 more)
fraud-analysis-agent/: Dockerfile  README.md  checkpoints.db-shm  checkpoints.db-wal  docker-compose.yml  pyproject.toml  review_ui.py
fraud-analysis-agent/app/: main.py  mcp_client.py  service.py  state.py
fraud-analysis-agent/app/contracts/: rulejson.py
fraud-analysis-agent/app/data/: mock_data.py  seed_mysql.py
fraud-analysis-agent/app/data/warehouse/: pom_acr.parquet  trans_log.parquet
fraud-analysis-agent/app/graph/: __init__.py
fraud-analysis-agent/app/llm/: __init__.py  base.py
fraud-analysis-agent/app/nodes/: __init__.py
fraud-analysis-agent/app/nodes/action_output/: __init__.py
fraud-analysis-agent/app/nodes/anomaly_check/: __init__.py  baseline.py  strategy.md
fraud-analysis-agent/app/nodes/fetch_data/: __init__.py  strategy.md
fraud-analysis-agent/app/nodes/ingest/: __init__.py
fraud-analysis-agent/app/shared/: __init__.py  historical.py  notify.py  pretty_report.py  schema.py  sql_safety.py  time_window.py  warehouse.py
fraud-analysis-agent/scripts/: e2e_test.py  test_scenarios.py
fraud-analysis-agent/tests/: test_service.py
fraud-config-agent-v2/: .env.example  .gitignore  Dockerfile  README.md  cli.py  mcp_client.py  pyproject.toml  requirements.txt
fraud-config-agent-v2/agent/: graph.py  nodes.py  prompts.py  schema.py  state.py
fraud-config-agent-v2/api/: main.py
fraud-config-agent-v2/llm/: __init__.py  base.py
fraud-config-agent-v2/services/: config_store.py  fraud_report_client.py  memory_service.py
fraud-config-agent-v2/static/: index.html
fraud-config-agent-v2/tests/: conftest.py  test_api.py  test_graph.py  test_nodes.py  test_units.py
fraud-risk-analysis-agent/: .dockerignore  Dockerfile  README.md  pyproject.toml
fraud-risk-analysis-agent/app/llm/: __init__.py
mcp-server/: .env.example  Dockerfile  main.py  pyproject.toml
mcp-server/db/: sql_safety.py  warehouse.py
mcp-server/tools/: config.py  investigation.py  shared.py
(+66 files in other folders)
