[project]
name = "fraud-analysis-agent"
version = "0.2.0"
description = "Fraud Risk Analysis Agent"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph>=0.2.0,<2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "streamlit>=1.32.0",
    "sqlalchemy>=2.0.50",
    "pymysql>=1.2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
postgres = ["langgraph-checkpoint-postgres>=2.0.0", "psycopg[binary]>=3.1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
