[project]
name = "fraud-config-agent-v2"
version = "0.1.0"
description = "Fraud Config Agent v2"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.9",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-dotenv>=1.1",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "httpx>=0.28",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
