
[project]
name = "fraud-risk-analysis-agent"
version = "0.1.0"
description = "Fraud Risk Analysis Agent"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "langchain>=1.2.0,<2.0.0",
    "langchain-openai>=1.1.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0",
]