[project]
name = "agentr-mcp-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.3.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "pandas>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]
